WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273821
[WebGPU] Fix build error in WebGPUOutOfMemoryError
https://bugs.webkit.org/show_bug.cgi?id=273821
Summary
[WebGPU] Fix build error in WebGPUOutOfMemoryError
Pablo Saavedra
Reported
2024-05-07 07:00:40 PDT
[WebGPU] Fix build error in WebGPUOutOfMemoryError
Attachments
Add attachment
proposed patch, testcase, etc.
Pablo Saavedra
Comment 1
2024-05-07 07:02:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28234
EWS
Comment 2
2024-05-08 16:32:51 PDT
Committed
278537@main
(9d0e5ac99f88): <
https://commits.webkit.org/278537@main
> Reviewed commits have been landed. Closing PR #28234 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-05-08 16:33:16 PDT
<
rdar://problem/127773357
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug