[WebGPU] Fix build error in WebGPUOutOfMemoryError and WebGPUExternalTextureBindingLayout https://bugs.webkit.org/show_bug.cgi?id=273821

Reviewed by Mike Wyrzykowski.

This fixes the error: converting to 'std::optional<WebKit::WebGPU::OutOfMemoryError>'
from initializer list would use explicit constructor.

* Source/WebKit/Shared/WebGPU/WebGPUExternalTextureBindingLayout.cpp:
(WebKit::WebGPU::ConvertToBackingContext::convertToBacking):
(WebKit::WebGPU::ConvertFromBackingContext::convertFromBacking):
* Source/WebKit/Shared/WebGPU/WebGPUOutOfMemoryError.cpp:
(WebKit::WebGPU::ConvertToBackingContext::convertToBacking):

Canonical link: https://commits.webkit.org/278537@main